styles/BookSeriesDO.less
/* ... */
@media (prefers-color-scheme: dark) {
	#app .adoe_container[data-type="BookSeries"] {

		.pubgraphPopup {
			// color: #333;
			background: #222;
		}


		.dataObjectItem.separator {
			border-top: 3px solid #a6ccff;
		}
		.dataObjectItem.futureSeparator {
			border-top: 6px solid #ff544f;
		}

		.dataObjectItem {
			color: #F7F7F7;	
			.dataObjectField[data-typename="publisher"] .publisherLink {
				color: white;
			}
		}
		
		.dataObjectItem[data-fieldvalue-status="1"] {
			background: #177400;

			&.nextNotOwnedVolumeIsSource {
				background: #177400;
			}
		}
		/*Backlog*/
		.dataObjectItem[data-fieldvalue-status="2"]{
			background: #ab5102;
		}
		/*Finished*/
		.dataObjectItem[data-fieldvalue-status="3"] {
			background: #335e33;
		}
		/*Dropped*/
		.dataObjectItem[data-fieldvalue-status="4"] {
			background: #430000;
		}
		/*Inactive*/
		.dataObjectItem[data-fieldvalue-status="3"],
		.dataObjectItem[data-fieldvalue-status="4"] {
			color: #bdbdbd;
			.publisherLink {
				color: #bdbdbd;
			}
		}
		/*Consider*/
		.dataObjectItem[data-fieldvalue-status="5"] {
			background: #460061;
		}
		/*Available*/
		.dataObjectItem[data-fieldvalue-status="6"] {
			background: #5a893f;
		}
		/*Stalled*/
		.dataObjectItem[data-fieldvalue-status="7"] {
			background: #007c53;
		}
		/*Announced*/
		.dataObjectItem[data-fieldvalue-status="8"] {
			background: #0a3e57;
		}
		/*Unlicensed*/
		.dataObjectItem[data-fieldvalue-status="9"] {
			background: #272727;
		}
		/*Prepub*/
		.dataObjectItem[data-fieldvalue-status="10"] {
			background: #2f2fc1;
		}

		/*Pending preorder*/
		.dataObjectItem[data-fieldvalue-status="1"][data-fieldvalue-preorder="true"] {
			background: #27b469;
			color: white;
			&:hover > td {
				background-color: rgba(0,0,0,0.25);
			}
			.dataObjectField[data-typename="owned"] .own-button {
				color: rgba(255,255,255,0.5);
			}
		}
		.hide-up-to-date-preordered .dataObjectItem[data-fieldvalue-status="1"][data-fieldvalue-preorder="true"] {
			display: none;
		}

		


		.bookSeriesVolumeTile {
			.content {
				background: #4a4a4a;
			}
			&[data-status="3"] .content { //Preorder
				background: #27b469;
			}
			&[data-status="3"][data-parentstatus="2"] .content,
			&[data-parentstatus="2"] .content { //Preorder, series is backlogged
				background: #942e00;
			}
			&[data-status="4"] .content { //Phys
				background: #84005b;
			}
			&[data-status="6"] .content { //Source
				background: #6f458b;
			}
			&[data-status="8"] .content { //Source
				background: #58ace8;
			}
			&[data-parentstatus="10"] .content { //Prepub
				background: #004adb;
			}
		}
	}
}

